<resources>
    <string name="app_name">ProgramareaMea</string>
<<<<<<< HEAD
    <string name="sign_out_button">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
=======
    <string name="programarea">ProgramareaMea</string>
    <string name="bine_ati_ve">Bine ati venit la</string>
    <string name="log_in">Log in</string>
    <string name="introdu_cod">Introdu codul de admin</string>
    <string name="label">Code\n</string>
    <string name="input">Input</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="admin">Admin</string>
    <string name="client">Client</string>
    <string name="alege_i_tip">Alege tipul contului</string>
    <string name="dashboard">Dashboard</string>
    <string name="nume_prenum">Nume Prenume</string>
    <string name="frizer">Frizer</string>
    <string name="sign_out_button">Sign out</string>
>>>>>>> origin/master
</resources>
