<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chose_your_"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_all"
    >

    <RelativeLayout
        android:id="@+id/admin_butto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="205dp"
        android:layout_marginTop="649dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/admin_butto"
        >

        <TextView
            android:id="@+id/admin"
            android:layout_width="143dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/admin"
            android:textAppearance="@style/admin"
            android:gravity="center_horizontal|center_vertical"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="649dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/client_butt"
        >

        <TextView
            android:id="@+id/client"
            android:layout_width="147dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/client"
            android:textAppearance="@style/client"
            android:gravity="center_horizontal|center_vertical"
            />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/top_text">

        <View
            android:id="@+id/vector_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/big_vector" />

        <TextView
            android:layout_width="248.17dp"
            android:layout_height="67dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="36dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/alege_i_tip"
            android:textAppearance="@style/alege_i_tip" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="212dp"
        android:layout_height="196dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="109dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />


</RelativeLayout>