<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/log_in_scre"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_all">


    <View
        android:id="@+id/vector_1"
        android:layout_width="401dp"
        android:layout_height="498dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="-5dp"
        android:background="@drawable/big_vector" />

    <RelativeLayout
        android:id="@+id/logo_back"
        android:layout_width="188dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/logo_back"
        android:elevation="4dp">

        <View
            android:id="@+id/logo_png"
            android:layout_width="152dp"
            android:layout_height="156dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/logomaker" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/welcome_tex"
        android:layout_width="283.39dp"
        android:layout_height="202.29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="298dp"
        android:background="#00000000" >

        <TextView
            android:layout_width="261.22dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-14dp"
            android:layout_marginTop="82dp"
            android:gravity="center_horizontal|center_vertical"
            android:padding="10dp"
            android:rotation="330"
            android:text="@string/bine_ati_ve"
            android:textAppearance="@style/bine_ati_ve" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="104dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="83dp"
            android:gravity="center_horizontal|center_vertical"
            android:padding="10dp"
            android:rotation="330"
            android:text="@string/programarea"
            android:textAppearance="@style/programarea" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="127dp"
        android:layout_marginTop="631dp"
        android:background="@drawable/log_in_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/log_in"
            android:textAppearance="@style/log_in" />
    </RelativeLayout>




</RelativeLayout>
