<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/log_in_scre"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_all">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vector_1"
        android:layout_width="fill_parent"
        android:layout_height="498dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="-5dp"
        android:background="@drawable/big_vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="104dp"
            android:gravity="center_horizontal|center_vertical"
            android:padding="10dp"
            android:rotation="330"
            android:text="@string/programarea"
            android:textAppearance="@style/programarea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="380dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="261.22dp"
            android:layout_height="53dp"
            android:gravity="center_horizontal|center_vertical"
            android:padding="10dp"
            android:rotation="330"
            android:text="@string/bine_ati_ve"
            android:textAppearance="@style/bine_ati_ve"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="380dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo_back"
        android:layout_width="188dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/logo_back"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/logo_png"
            android:layout_width="152dp"
            android:layout_height="156dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/logomaker"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:background="@drawable/log_in_back"
        android:fontFamily="@font/roboto"
        android:text="@string/log_in"
        android:textAppearance="@style/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vector_1"
        app:layout_constraintVertical_bias="0.994" />


</androidx.constraintlayout.widget.ConstraintLayout>
